--- a/myhtml.html
+++ b/myhtml.html
@@ -51,7 +51,25 @@
           </div>
         </div>
       </nav>
+
     </header>
+    <!-- section 1 top banner -->
+    <section id="#home">
+      <div class="container-fluid px-0 top-banner">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-5 col-md-6">
+              <h1>UNLIMITED <br>MEDIUM <span>PIZZAS</span></h1>
+              <h2>medium 2-topping* pizza</h2>
+              <p>*additional charge for premium toppings. minimum of 2 required.</p>
+              <div class="mt-4">
+               <button class="main-btn">Order now <i class="fas fa-shopping-basket ps-3"></i></button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
 
 
