--- a/myhtml.html
+++ b/myhtml.html
@@ -70,7 +70,37 @@
         </div>
       </div>
     </section>
+<!-- section 2 our - menu -->
+<section class="our-menu p-4">
+  <div class="container text-center">
+    <h2 class="pb-4">Our menu</h2>
+    <div class="row">
+      <div class="col-6 col-sm-2 mb-4 mb-lg-0">
+        <div class="card">
+          <div class="cat-image">
+            <a  class="link-category-product" href = "#">
+               <img src="./images/img/category1.png" alt="category1" class="img-fluid">
+             </a>
+             <div class="cat-title">
+              <a href="">pizza</a>
+             </div>
+             </div>
+             </div>
+        <div class="col-6 col-sm-2 mb-4 mb-lg-0">
+          <div class="card">
+            <div class="cat-image">
+              <a  class="link-category-product" href = "#">
+                 <img src="./images/img/category2.png" alt="category1" class="img-fluid">
+               </a>
+               <div class="cat-title">
+                <a href="#">Sauces</a>
+               </div>
+      </div>
+    </div>
 
+  </div>
+
+</section>
 
 
 
