updating the layout of our menu design

--- a/myhtml.html
+++ b/myhtml.html
@@ -34,10 +34,10 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0" >
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#home">Home</a>
+                <a class="nav-link active" aria-current="page" href="home.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#about">About us</a>
+                <a class="nav-link" href="about.html">About us</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#explore-food">Explore Foods</a>
@@ -70,52 +70,92 @@
         </div>
       </div>
     </section>
-<!-- section 2 our - menu -->
-<section class="our-menu p-4">
-  <div class="container text-center">
-    <h2 class="pb-4">Our menu</h2>
-    <div class="row">
-      <div class="col-6 col-sm-2 mb-4 mb-lg-0">
-        <div class="card">
-          <div class="cat-image">
-            <a  class="link-category-product" href = "#">
-               <img src="./images/img/category1.png" alt="category1" class="img-fluid">
-             </a>
-             <div class="cat-title">
-              <a href="">pizza</a>
-             </div>
-             </div>
-             </div>
-        <div class="col-6 col-sm-2 mb-4 mb-lg-0">
-          <div class="card">
-            <div class="cat-image">
-              <a  class="link-category-product" href = "#">
-                 <img src="./images/img/category2.png" alt="category1" class="img-fluid">
-               </a>
-               <div class="cat-title">
-                <a href="#">Sauces</a>
-               </div>
+    <section class="our-menu p-4">
+      <div class="container text-center">
+        <h2 class="pb-4">Our Menu</h2>
+        <div class="row d-flex flex-wrap justify-content-center">
+          <!-- Pizza -->
+          <div class="col-6 col-sm-2 mb-4">
+            <div class="card">
+              <div class="cat-image">
+                <a class="link-category-product" href="#">
+                  <img src="./images/img/category1.png" alt="Pizza" class="img-fluid">
+                </a>
+                <div class="cat-title">
+                  <a href="#">Pizza</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Sauces -->
+          <div class="col-6 col-sm-2 mb-4">
+            <div class="card">
+              <div class="cat-image">
+                <a class="link-category-product" href="#">
+                  <img src="./images/img/category2.png" alt="Sauces" class="img-fluid">
+                </a>
+                <div class="cat-title">
+                  <a href="#">Sauces</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Combo -->
+          <div class="col-6 col-sm-2 mb-4">
+            <div class="card">
+              <div class="cat-image">
+                <a class="link-category-product" href="#">
+                  <img src="./images/img/category3.png" alt="Combo" class="img-fluid">
+                </a>
+                <div class="cat-title">
+                  <a href="#">Combo</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Kids Menus -->
+          <div class="col-6 col-sm-2 mb-4">
+            <div class="card">
+              <div class="cat-image">
+                <a class="link-category-product" href="#">
+                  <img src="./images/img/category4.png" alt="Kids Menus" class="img-fluid">
+                </a>
+                <div class="cat-title">
+                  <a href="#">Kids Menus</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Chicken -->
+          <div class="col-6 col-sm-2 mb-4">
+            <div class="card">
+              <div class="cat-image">
+                <a class="link-category-product" href="#">
+                  <img src="./images/img/category5.png" alt="Chicken" class="img-fluid">
+                </a>
+                <div class="cat-title">
+                  <a href="#">Chicken</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Box Meals -->
+          <div class="col-6 col-sm-2 mb-4">
+            <div class="card">
+              <div class="cat-image">
+                <a class="link-category-product" href="#">
+                  <img src="./images/img/category6.png" alt="Box Meals" class="img-fluid">
+                </a>
+                <div class="cat-title">
+                  <a href="#">Box Meals</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
-
-  </div>
-
-</section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    </section>
+    
 
 
 
