--- a/myhtml.html
+++ b/myhtml.html
@@ -155,6 +155,34 @@
         </div>
       </div>
     </section>
+    <!-- section-3 about -->
+    <section id="about">
+      <div class="about-section wrapper">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-lg-7 col-md-12 mb-lg-0 mb-5">
+            <div class="card border-0">
+              <img src="images/img/img-1.png" class="img-fluid" alt="">
+            </div>
+          </div>
+       <div class="col-lg-5 col-md-12 text-sec">
+        <h2>we pride ourselves on making real food from the best ingredients.</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus error, eveniet cupiditate odit aut doloribus dolore, suscipit asperiores dolores nulla aliquid quae, veniam commodi necessitatibus praesentium illum dolorum reiciendis repudiandae?</p>
+        <button class="main-btn mt-4">Learn more</button>
+       </div>
+     </div>
+   </div>
+   <div class="container food-type">
+    <div class="row align-items-center">
+      <div class="col-lg-5 col-md-12 text-sec mb-lg-0 mb0-5">
+        <h2>we make everything by hand with the best possible ingredients</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam a debitis, sed odit minus quod quas atque. Fuga placeat voluptatum obcaecati repudiandae, eveniet a architecto repellendus magni veritatis voluptatem nesciunt.</p>
+        <ul class="list-unstyled"></ul>
+      </div>
+    </div>
+   </div>
+      </div>
+    </section>
     
 
 
