adding a good description paragraph for the food type

--- a/myhtml.html
+++ b/myhtml.html
@@ -165,19 +165,34 @@
               <img src="images/img/img-1.png" class="img-fluid" alt="">
             </div>
           </div>
-       <div class="col-lg-5 col-md-12 text-sec">
-        <h2>we pride ourselves on making real food from the best ingredients.</h2>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus error, eveniet cupiditate odit aut doloribus dolore, suscipit asperiores dolores nulla aliquid quae, veniam commodi necessitatibus praesentium illum dolorum reiciendis repudiandae?</p>
-        <button class="main-btn mt-4">Learn more</button>
-       </div>
+          <div class="col-lg-5 col-md-12 text-sec">
+            <h2>We pride ourselves on making real food from the best ingredients.</h2>
+            <p>At our restaurant, every dish is crafted with care and passion, using only the freshest, highest-quality ingredients. We believe in celebrating the joy of wholesome, flavorful food that brings people together. From farm-fresh produce to hand-selected spices, every element of our menu is thoughtfully chosen to create a dining experience that's both delicious and memorable. Come taste the difference that real food makes!</p>
+            <button class="main-btn mt-4">Learn more</button>
+        </div>
+        
      </div>
    </div>
    <div class="container food-type">
     <div class="row align-items-center">
       <div class="col-lg-5 col-md-12 text-sec mb-lg-0 mb0-5">
-        <h2>we make everything by hand with the best possible ingredients</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam a debitis, sed odit minus quod quas atque. Fuga placeat voluptatum obcaecati repudiandae, eveniet a architecto repellendus magni veritatis voluptatem nesciunt.</p>
-        <ul class="list-unstyled"></ul>
+        <h2>We make everything by hand with the best possible ingredients</h2>
+    <p>At our restaurant, every dish is crafted from scratch with an unwavering commitment to quality. We source only the finest, freshest ingredients, ensuring that every bite is packed with authentic flavor and unparalleled freshness. Our dedication to handmade excellence is what sets us apart, creating meals that are both satisfying and unforgettable.</p>
+    <p>Whether it's our perfectly baked bread, vibrant salads, or signature entrées, every item on our menu is a testament to our passion for great food. We believe in delivering not just a meal, but an experience—one that celebrates the art of cooking and the joy of sharing it with those you love.</p>
+  <ul class="list-unstyled py-3">
+    <li>pizzaa</li>
+    <li>burger</li>
+    <li>cake</li>
+  </ul>
+        <button class="main-btn mt-4">Learn more</button>
+
+
+      </div>
+      <div class="col-lg-7 col-md-12">
+        <div class="card border-0">
+          <img src="images/img/img-2.png" alt="" class="img-fluid">
+
+        </div>
       </div>
     </div>
    </div>
